hard-gists/3972601/run.log
=== Docker Run Log for 3972601 ===
Started at: Mi 29. Okt 14:07:08 CET 2025

[2025-10-29 14:07:09] START: Running container for 3972601
[2025-10-29 14:07:09] SUCCESS: Container 1f96bfc60b7b6f7dea35754b1766226e4c6c0ef9a05231b1d114d5f8d7ffe3b9 started for 3972601
=== Container logs for 3972601 ===
  File "/snippet.py", line 64
    except facebook.FacepyError, e:
           ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 3972601 ===
[2025-10-29 14:07:11] INFO: Container 1f96bfc60b7b6f7dea35754b1766226e4c6c0ef9a05231b1d114d5f8d7ffe3b9 has stopped
